[gd_scene load_steps=9 format=4 uid="uid://dl6l5mc7llecd"]

[ext_resource type="Script" uid="uid://cj15xvru8nahd" path="res://scripts/health_component.gd" id="1_crtid"]
[ext_resource type="Texture2D" uid="uid://2dhfltmqtyw4" path="res://assets/UiCozyFree.png" id="2_eqgb2"]
[ext_resource type="FontFile" uid="uid://d3uyqpog4e48d" path="res://fonts/VCR_OSD_MONO_1.001.ttf" id="3_ibicj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xihqu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wopwq"]
texture = ExtResource("2_eqgb2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0

[sub_resource type="TileSet" id="TileSet_11lnj"]
sources/0 = SubResource("TileSetAtlasSource_wopwq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoy4g"]
bg_color = Color(0.286275, 0.627451, 0.898039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ur5e7"]
bg_color = Color(0.673031, 0.413077, 0.387277, 1)
corner_radius_top_left = 20
corner_radius_bottom_right = 20

[node name="goals" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_crtid")

[node name="Panel" type="Panel" parent="."]
offset_left = -728.0
offset_top = -440.0
offset_right = -688.0
offset_bottom = -400.0
scale = Vector2(68.4616, 225.572)
theme_override_styles/panel = SubResource("StyleBoxFlat_xihqu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(4.67473, 5.31583)
tile_map_data = PackedByteArray("AAABAAAAAAAAAAoAAAACAAAAAAABAAoAAAADAAAAAAACAAoAAAAEAAAAAAADAAoAAAAFAAAAAAADAAoAAAAGAAAAAAADAAoAAAAIAAAAAAADAAoAAAAHAAAAAAADAAoAAAAJAAAAAAADAAoAAAAKAAAAAAADAAoAAAALAAAAAAADAAoAAAAMAAAAAAAEAAoAAAANAAAAAAAFAAoAAAABAAEAAAAAAAsAAAABAAIAAAAAAAwAAAABAAMAAAAAAA0AAAABAAQAAAAAAA4AAAACAAEAAAABAAsAAAACAAIAAAABAAwAAAACAAMAAAABAA0AAAACAAQAAAABAA4AAAABAAUAAAAAAAsAAAABAAYAAAAAAAwAAAACAAUAAAABAAsAAAACAAYAAAABAAwAAAABAAcAAAAAAA8AAAACAAcAAAABAA8AAAADAAcAAAACAA8AAAAEAAcAAAADAA8AAAAFAAcAAAAEAA8AAAAGAAcAAAACAA8AAAAHAAcAAAADAA8AAAAIAAcAAAAEAA8AAAAJAAcAAAACAA8AAAAKAAcAAAACAA8AAAALAAcAAAADAA8AAAAMAAcAAAAEAA8AAAANAAcAAAAFAA8AAAANAAEAAAAFAAsAAAANAAIAAAAFAAwAAAANAAMAAAAFAAsAAAANAAQAAAAFAAwAAAANAAUAAAAFAA0AAAANAAYAAAAFAA4AAAADAAEAAAACAAwAAAADAAIAAAACAA0AAAAEAAEAAAADAAwAAAAEAAIAAAADAA0AAAAFAAEAAAAEAAwAAAAFAAIAAAAEAA0AAAADAAMAAAACAAwAAAADAAQAAAACAA0AAAAEAAMAAAADAAwAAAAEAAQAAAADAA0AAAAFAAMAAAAEAAwAAAAFAAQAAAAEAA0AAAADAAUAAAACAAwAAAADAAYAAAACAA0AAAAEAAUAAAADAAwAAAAEAAYAAAADAA0AAAAFAAUAAAAEAAwAAAAFAAYAAAAEAA0AAAAGAAEAAAACAAwAAAAGAAIAAAACAA0AAAAHAAEAAAADAAwAAAAHAAIAAAADAA0AAAAIAAEAAAAEAAwAAAAIAAIAAAAEAA0AAAAGAAMAAAACAAwAAAAGAAQAAAACAA0AAAAHAAMAAAADAAwAAAAHAAQAAAADAA0AAAAIAAMAAAAEAAwAAAAIAAQAAAAEAA0AAAAGAAUAAAACAAwAAAAGAAYAAAACAA0AAAAHAAUAAAADAAwAAAAHAAYAAAADAA0AAAAIAAUAAAAEAAwAAAAIAAYAAAAEAA0AAAAJAAEAAAACAAwAAAAJAAIAAAACAA0AAAAKAAEAAAACAAwAAAAKAAIAAAACAA0AAAALAAEAAAADAAwAAAALAAIAAAADAA0AAAAJAAMAAAACAAwAAAAJAAQAAAACAA0AAAAKAAMAAAACAAwAAAAKAAQAAAACAA0AAAALAAMAAAADAAwAAAALAAQAAAADAA0AAAAJAAUAAAACAAwAAAAJAAYAAAACAA0AAAAKAAUAAAACAAwAAAAKAAYAAAACAA0AAAALAAUAAAADAAwAAAALAAYAAAADAA0AAAAMAAEAAAAEAAwAAAAMAAIAAAAEAA0AAAAMAAMAAAAEAAwAAAAMAAQAAAAEAA0AAAAMAAUAAAAEAAwAAAAMAAYAAAAEAA0AAAA=")
tile_set = SubResource("TileSet_11lnj")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.034
offset_left = 184.0
offset_top = 38.0
offset_right = 944.0
offset_bottom = 263.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/normal_font = ExtResource("3_ibicj")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/fill = SubResource("StyleBoxFlat_eoy4g")
text = "Your Goal:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.034
offset_left = 193.0
offset_top = 250.0
offset_right = 953.0
offset_bottom = 475.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/normal_font = ExtResource("3_ibicj")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/fill = SubResource("StyleBoxFlat_eoy4g")
text = "Defeat the Orc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.034
offset_left = 198.0
offset_top = 129.0
offset_right = 958.0
offset_bottom = 354.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/normal_font = ExtResource("3_ibicj")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/fill = SubResource("StyleBoxFlat_eoy4g")
text = "Complete All Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.034
offset_left = 189.0
offset_top = 374.0
offset_right = 949.0
offset_bottom = 599.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/normal_font = ExtResource("3_ibicj")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/fill = SubResource("StyleBoxFlat_eoy4g")
text = "Don't Die!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 843.0
offset_top = 526.0
offset_right = 973.0
offset_bottom = 575.0
theme_override_fonts/font = ExtResource("3_ibicj")
theme_override_styles/normal = SubResource("StyleBoxFlat_ur5e7")
text = "Next"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
